edited add into db
